--- a/layout.html
+++ b/layout.html
@@ -17,13 +17,21 @@
   <link href='//fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
   <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({ tex2jax: {inlineMath: [['$','$']]} });
+    MathJax.Hub.Config({
+      tex2jax: {
+        inlineMath: [ ['$','$'] ],
+        displayMath: [ ['$$','$$'] ],
+        processEscapes: true
+      }
+    });
   </script>
-  <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+  <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
   <script>
     $(document).ready(function(){
       if($('div#preview-body').size() > 0) {
-        var observer = new MutationObserver(function(){MathJax.Hub.Typeset($('div#preview-body')[0]);});
+        var observer = new MutationObserver(function(){
+          MathJax.Hub.Queue(['Typeset', MathJax.Hub, 'preview-body']);
+        });
         observer.observe($('div#preview-body')[0], { childList: true, subtree: false });
       }
     });
