--- a/layout.html
+++ b/layout.html
@@ -25,7 +25,7 @@
       }
     });
   </script>
-  <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
+  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_HTML"></script>
   <script>
     $(document).ready(function(){
       if($('div#preview-body').size() > 0) {
